get resources by group and version
