# api/openapi.yaml
@@ -2139,6 +2139,21 @@ paths:
       - Rbac Auth Resource
   /apis/resources:
     get:
+      parameters:
+      - explode: true
+        in: query
+        name: group
+        required: false
+        schema:
+          type: string
+        style: form
+      - explode: true
+        in: query
+        name: version
+        required: false
+        schema:
+          type: string
+        style: form
       responses:
         "200":
           content:
